ignore list updated

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,65 @@
 FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/MBS_Main_Registration_Plugin_18844.dll
 
 *.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/FRC Scouting App.app/Contents/Info.plist
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/FRC Scouting App.app/Contents/Info.plist
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/FRC Scouting App.app/Contents/MacOS/FRC Scouting App
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/AppearancePakCocoa.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/Crypto.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/DateControl
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/EHSearchControl
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/InternetEncodings.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/MBS_Registration_Plugin_18844.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/PostgreSQLPlugin.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/Shell.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/SQLiteDatabase.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/WindowSplitter
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/XML.dylib
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/Frameworks/XojoFramework.framework/Versions/A/XojoFramework
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/Wrapped Application/FRC Scouting App.app/Contents/MacOS/FRC Scouting App
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/Appearance Pak.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/Crypto.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/EHDateCtrl5601.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/EHSearchControl1501.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/EHWindowSplitter8501.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/Internet Encodings.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/msvcp120.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/msvcr120.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/PostgreSQLPlugin.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/Shell.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/SQLiteDatabase.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/XML.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App Libs/XojoGUIFramework32.dll
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Windows/FRC Scouting App/FRC Scouting App.exe
+
+FRC Scout/Builds - FRC_Scout.xojo_binary_project/Mac OS X (Cocoa Intel)/FRC Scouting App.app/Contents/Info.plist
